--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,2 @@
 theme: jekyll-theme-minimal
+title: QHops:  A Minecraft agent that learns to complete parkour courses through reinforcement learning
