--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,3 @@
 theme: jekyll-theme-minimal
-title: QHops:  A Minecraft agent that learns to complete parkour courses through reinforcement learning
+title: QHops
+description: QHops: A Minecraft agent that learns to complete parkour courses through reinforcement learning
