--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
 title: QHops
-description: QHops: A Minecraft agent that learns to complete parkour courses through reinforcement learning
+description: A Minecraft agent that learns to complete parkour courses through reinforcement learning
