--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
 title: QHops
-description: A Minecraft agent that learns to complete parkour courses through reinforcement learning /n Group 49 /n Interview time: 1:45pm
+description: A Minecraft agent that learns to complete parkour courses through reinforcement learning
